# template

./: README.md  main.cpp  meson.build
framework/: adw_simple.cpp  adw_simple.h
